<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorTelaConfiguracao"
    tools:context=".ConfigurarActivity">

    <TextView
        android:id="@+id/textViewNivel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/selecione_o_nivel_do_jogo"
       android:layout_gravity="center"/>

    <RadioGroup
        android:id="@+id/radioGroupModoFND"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/radioButtonFacil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Fácil" />

        <RadioButton
            android:id="@+id/radioButtonNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Normal" />

        <RadioButton
            android:id="@+id/radioButtonDificil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Difícil" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewNumeroPecas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/escolha_o_numeros_de_pecas" />

    <RadioGroup
        android:id="@+id/radioGroupQuantidadePecas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioButtonCinco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5" />

        <RadioButton
            android:id="@+id/radioButtonSeis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_6" />

        <RadioButton
            android:id="@+id/radioButtonSete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonSalvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salvar"
            android:layout_gravity="center" />

    </LinearLayout>



</LinearLayout>